--- a/src/main/java/com/blackflower/curriculumcreator/LoginPanel.form
+++ b/src/main/java/com/blackflower/curriculumcreator/LoginPanel.form
@@ -41,7 +41,7 @@
     <Container class="com.blackflower.curriculumcreator.customComponents.CCGradientPanel" name="cCGradientPanel1">
       <Properties>
         <Property name="gradientEndd" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="99" green="99" red="99" type="rgb"/>
+          <Color blue="cc" green="cc" red="cc" type="rgb"/>
         </Property>
         <Property name="gradientStart" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="cc" green="cc" red="cc" type="rgb"/>
