File API used for remember me button and download sessions

--- a/src/main/java/com/blackflower/curriculumcreator/studentspages/ShowSessionDetailsPanel.form
+++ b/src/main/java/com/blackflower/curriculumcreator/studentspages/ShowSessionDetailsPanel.form
@@ -19,10 +19,6 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace pref="150" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                      <Component id="welcomeLabel" max="32767" attributes="0"/>
-                      <Component id="jScrollPane1" pref="602" max="32767" attributes="0"/>
-                  </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
                           <Component id="lessonsComboBox" alignment="0" pref="182" max="32767" attributes="0"/>
@@ -33,6 +29,11 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="clearFilterLink" min="-2" pref="121" max="-2" attributes="0"/>
                   </Group>
+                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                      <Component id="welcomeLabel" max="32767" attributes="0"/>
+                      <Component id="jScrollPane1" pref="602" max="32767" attributes="0"/>
+                  </Group>
+                  <Component id="downloadSessionsBtn" alignment="1" min="-2" pref="149" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="174" max="-2" attributes="0"/>
           </Group>
@@ -51,9 +52,11 @@
                   <Component id="filterBtn" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="clearFilterLink" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="336" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="downloadSessionsBtn" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -124,6 +127,14 @@
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="clearFilterLinkMouseClicked"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="downloadSessionsBtn">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Download Sessions"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="downloadSessionsBtnActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
